<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">minimalist phone</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.crashlytics.android.build_id">7f3f7857ed9b4f61bdfd3a0f1467bf2f</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="default_web_client_id">686636122116-sb5qa58be6oem0aa42b23becjmigimbb.apps.googleusercontent.com</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="firebase_database_url">https://minimalist-launcher.firebaseio.com</string>
    <string name="gcm_defaultSenderId">686636122116</string>
    <string name="google_api_key">AIzaSyDss2edD74eRM737b9btJoyQq9-3xohRbs</string>
    <string name="google_app_id">1:686636122116:android:895d0e9c7e789274cb3551</string>
    <string name="google_crash_reporting_api_key">AIzaSyDss2edD74eRM737b9btJoyQq9-3xohRbs</string>
    <string name="google_storage_bucket">minimalist-launcher.appspot.com</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="label">Label</string>
    <string name="m3_ref_typeface_brand_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_brand_regular">sans-serif</string>
    <string name="m3_ref_typeface_plain_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_plain_regular">sans-serif</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_accelerate">cubic-bezier(0.3, 0.0, 0.8, 0.2)</string>
    <string name="m3_sys_motion_easing_emphasized_decelerate">cubic-bezier(0.1, 0.7, 0.1, 1.0)</string>
    <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="m3_sys_motion_easing_legacy">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_legacy_decelerate">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="m3_sys_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard">cubic-bezier(0.2, 0.0, 0.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard_accelerate">cubic-bezier(0.3, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard_decelerate">cubic-bezier(0.0, 0.0, 0.0, 1.0)</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">"%1$s o'clock"</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="material_timepicker_select_time">Select time</string>
    <string name="material_timepicker_text_input_mode_description">Switch to text input mode for the time input.</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="sid_add_to_favourites">Add to favorites</string>
    <string name="sid_app_info">App info</string>
    <string name="sid_block_app_btn">Block</string>
    <string name="sid_contact_cancel">Cancel</string>
    <string name="sid_contact_support_issue_description">Describe your issue here.</string>
    <string name="sid_contact_support_send_as_email">Send as email</string>
    <string name="sid_contact_support_title">Contact support</string>
    <string name="sid_context_menu_in_app_time_reminder_active_btn">Time reminder active</string>
    <string name="sid_enable_notification_access_btn">Enable notification access</string>
    <string name="sid_enable_system_overlay_permission_btn">Open overlay settings</string>
    <string name="sid_enable_usage_stats_permission_btn">Open usage permission setting</string>
    <string name="sid_hide_app">Hide</string>
    <string name="sid_hide_ongoing_notifications_active">Hide ongoing notifications</string>
    <string name="sid_hide_ongoing_notifications_hint">You may need to restart your phone to see ongoing notifications again after hiding them.</string>
    <string name="sid_intro_step6_subtitle">"Expect to feel the effects of living a more intentional and less distracted life right away. After adjusting to the minimalist phone, many people never go back.


Try it yourself for at least 3 days and form your own opinion!"</string>
    <string name="sid_intro_step6_text">"Next: we need a few permissions to make minimalist phone work the way it's meant to ➔"</string>
    <string name="sid_intro_step6_title">How does using the minimalist phone app feel?</string>
    <string name="sid_notification_manager_active_btn">Notification filter active</string>
    <string name="sid_notification_manager_intro">"Notifications are a highly invasive element forcing you to switch tasks and interrupting any complex thoughts. They also cause addictive behavior.

Activate this notification filter to minimize distractions.

You will still be able to see the filtered notifications and stay in full control of what is displayed and what is not.

1) Press button and find minimalist phone 

2)Allow notification access"</string>
    <string name="sid_notification_permission_explanation">Access to your notifications is required for notification filter to work.</string>
    <string name="sid_notification_setting_description">Allow notifications from</string>
    <string name="sid_ongoing_notifications_not_filtered_hint">Ongoing notifications will not be filtered.</string>
    <string name="sid_permission_can_be_remove_later">You can remove the permission anytime later.</string>
    <string name="sid_remove_from_favourites">Remove from favorites</string>
    <string name="sid_rename_app">Rename</string>
    <string name="sid_set_as_default_launcher_contact_support">Are you having trouble setting default home screen? <u>Contact support via email</u>.</string>
    <string name="sid_settings_item_font_family">Font</string>
    <string name="sid_settings_item_font_family_architect">Architect</string>
    <string name="sid_settings_item_font_family_condensed">Condensed</string>
    <string name="sid_settings_item_font_family_default">Default</string>
    <string name="sid_settings_item_font_family_goldman">Goldman</string>
    <string name="sid_settings_item_font_family_light">Light</string>
    <string name="sid_settings_item_font_family_medium">Medium</string>
    <string name="sid_settings_item_font_family_monospace">Monospace</string>
    <string name="sid_settings_item_font_family_thin">Thin</string>
    <string name="sid_system_overlay_intro">"minimalist phone needs permission to display content over other apps to allow the in-app time reminder to work. 

1) Press button below and find minimalist phone 

2) Allow display over other apps"</string>
    <string name="sid_uninstall">Uninstall</string>
    <string name="sid_usage_stats_intro">minimalist phone needs access to usage statistics for the in-app time reminder to be functional.</string>
</resources>