<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/scrollView_dialog_font_selection" android:background="@color/colorBackground" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:paddingLeft="20.0dip" android:paddingTop="15.0dip" android:paddingRight="20.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sid_settings_item_font_family" android:paddingHorizontal="20.0dip" />
        <RadioGroup android:orientation="vertical" android:id="@id/font_selection_radio_group" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RadioButton android:id="@id/font_btn_default" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sid_settings_item_font_family_default" android:fontFamily="@font/roboto_regular" />
            <RadioButton android:id="@id/font_btn_monospace" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sid_settings_item_font_family_monospace" android:fontFamily="@font/roboto_mono" />
            <RadioButton android:id="@id/font_btn_condensed" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sid_settings_item_font_family_condensed" android:fontFamily="@font/roboto_condensed" />
            <RadioButton android:id="@id/font_btn_light" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sid_settings_item_font_family_light" android:fontFamily="@font/roboto_light" />
            <RadioButton android:id="@id/font_btn_medium" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sid_settings_item_font_family_medium" android:fontFamily="@font/roboto_medium" />
            <RadioButton android:id="@id/font_btn_condensed_thin" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sid_settings_item_font_family_thin" android:fontFamily="@font/roboto_thin" />
            <RadioButton android:id="@id/font_btn_goldman" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sid_settings_item_font_family_goldman" android:fontFamily="@font/goldman" />
            <RadioButton android:id="@id/font_btn_architect" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sid_settings_item_font_family_architect" android:fontFamily="@font/architect" />
        </RadioGroup>
    </LinearLayout>
</ScrollView>