<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/background_view_dialog_contact_support" android:background="@drawable/button_background_wripple_transparend_round_corners" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="24.0sp" android:paddingLeft="25.0dip" android:paddingTop="10.0dip" android:paddingRight="25.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sid_contact_support_title" android:paddingHorizontal="25.0dip" android:paddingVertical="10.0dip" />
    <TextView android:textSize="16.0sp" android:id="@id/topic_text_dialog_contact_support" android:paddingLeft="25.0dip" android:paddingTop="15.0dip" android:paddingRight="25.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingHorizontal="25.0dip" />
    <EditText android:textSize="16.0sp" android:id="@id/edit_text_dialog_contact_support" android:layout_width="fill_parent" android:layout_height="100.0dip" android:layout_marginLeft="25.0dip" android:layout_marginRight="25.0dip" android:hint="@string/sid_contact_support_issue_description" android:inputType="text" android:layout_marginHorizontal="25.0dip" android:autofillHints="text" />
    <androidx.appcompat.widget.AppCompatButton android:textSize="16.0sp" android:textColor="@color/text_color_with_disabled_state" android:id="@id/send_email_btn_dialog_contact_support" android:background="@drawable/button_highlighted_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="25.0dip" android:layout_marginBottom="10.0dip" android:text="@string/sid_contact_support_send_as_email" android:layout_marginHorizontal="25.0dip" android:layout_marginVertical="10.0dip" app:backgroundTint="@null" />
    <androidx.appcompat.widget.AppCompatButton android:textSize="16.0sp" android:textColor="@color/colorText" android:id="@id/negative_btn_dialog_contact_support" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:layout_marginRight="25.0dip" android:layout_marginBottom="10.0dip" android:text="@string/sid_contact_cancel" android:layout_marginHorizontal="25.0dip" />
</LinearLayout>