<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="16.0sp" android:gravity="center" android:layout_gravity="center" android:id="@id/fragment_usage_stats_permission_text" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/sid_usage_stats_intro" android:layout_marginHorizontal="15.0dip" app:layout_constraintBottom_toTopOf="@id/fragment_usage_stats_permission_button" app:layout_constraintTop_toTopOf="parent" />
    <Button android:textSize="16.0sp" android:textColor="@color/colorBackground" android:id="@id/fragment_usage_stats_permission_button" android:background="@drawable/button_background_wripple_filled" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/sid_enable_usage_stats_permission_btn" android:textAllCaps="false" android:layout_marginHorizontal="15.0dip" app:backgroundTint="@null" app:layout_constraintBottom_toTopOf="@id/fragment_usage_stats_permission_contact_support" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="16.0sp" android:gravity="center" android:layout_gravity="center" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/sid_permission_can_be_remove_later" android:layout_marginHorizontal="15.0dip" app:layout_constraintTop_toBottomOf="@id/fragment_usage_stats_permission_button" />
    <TextView android:textSize="12.0sp" android:gravity="center" android:id="@id/fragment_usage_stats_permission_contact_support" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip" android:text="@string/sid_set_as_default_launcher_contact_support" android:layout_marginVertical="15.0dip" android:paddingHorizontal="20.0dip" app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>