<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/settings" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="16.0sp" android:gravity="center" android:layout_gravity="center" android:id="@id/intro_text" android:paddingBottom="15.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/sid_notification_manager_intro" android:layout_marginHorizontal="15.0dip" />
    <Button android:textSize="16.0sp" android:textColor="@color/colorBackground" android:id="@id/enable_permission_btn" android:background="@drawable/button_background_wripple_filled" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/sid_enable_notification_access_btn" android:textAllCaps="false" android:layout_marginHorizontal="15.0dip" app:backgroundTint="@null" />
    <TextView android:textSize="16.0sp" android:gravity="center" android:layout_gravity="center" android:id="@id/permission_text" android:paddingBottom="15.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/sid_notification_permission_explanation" android:layout_marginHorizontal="15.0dip" />
    <LinearLayout android:orientation="vertical" android:id="@id/control_section" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <androidx.appcompat.widget.SwitchCompat android:theme="@style/mSwitchThemeChecked" android:id="@id/notification_manager_active_switch" android:paddingLeft="15.0dip" android:paddingTop="5.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sid_notification_manager_active_btn" android:paddingHorizontal="15.0dip" />
        <LinearLayout android:orientation="vertical" android:id="@id/detailed_settings_section" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/notification_manager_active_switch_hint" android:paddingBottom="25.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/sid_ongoing_notifications_not_filtered_hint" android:paddingStart="15.0dip" android:paddingEnd="50.0dip" style="@style/AppThemeSmall" />
            <androidx.appcompat.widget.SwitchCompat android:theme="@style/mSwitchThemeChecked" android:id="@id/hide_ongoing_notifications_active_switch" android:paddingLeft="15.0dip" android:paddingTop="15.0dip" android:paddingRight="15.0dip" android:paddingBottom="5.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sid_hide_ongoing_notifications_active" android:paddingHorizontal="15.0dip" />
            <TextView android:textColor="@color/colorTextSelected" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/sid_hide_ongoing_notifications_hint" android:paddingStart="15.0dip" android:paddingEnd="50.0dip" style="@style/AppThemeSmall" />
            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:gravity="start" android:id="@id/notification_allowed_apps_title" android:background="@null" android:paddingTop="5.0dip" android:paddingBottom="15.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/sid_notification_setting_description" android:textAllCaps="false" android:paddingStart="15.0dip" android:paddingEnd="5.0dip" app:layout_constraintEnd_toStartOf="@id/search_button_notification" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
                <ImageButton android:id="@id/search_button_notification" android:background="@null" android:layout_width="wrap_content" android:layout_height="0.0dip" android:src="@drawable/ic_search_24px" android:paddingStart="12.0dip" android:paddingEnd="5.0dip" app:layout_constraintBottom_toBottomOf="@id/notification_allowed_apps_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/notification_allowed_apps_title" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout android:orientation="horizontal" android:id="@id/search_section_notification_settings" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <EditText android:id="@id/search_edit_text" android:paddingTop="15.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:inputType="textNoSuggestions" android:paddingStart="10.0dip" android:importantForAutofill="no" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/clear_search_button_notification_settings" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
                <ImageButton android:id="@id/clear_search_button_notification_settings" android:background="@null" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="0.0dip" android:src="@drawable/ic_delete_24dp" android:paddingStart="12.0dip" android:paddingEnd="5.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <View android:layout_gravity="bottom" android:id="@id/notification_search_separator" android:background="@color/colorText" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="-15.0dip" android:layout_marginRight="-15.0dip" android:layout_marginHorizontal="-15.0dip" />
            <androidx.recyclerview.widget.RecyclerView android:id="@id/app_list_recycler_view" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" android:overScrollMode="never" android:paddingStart="30.0dip" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>